<resources>
    <string name="app_name">Lift Metrics</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exercises">Exercises</string>

    <!-- Muscle groups -->
    <string name="all">All</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="chest">Chest</string>
    <string name="shoulders">Shoulders</string>
    <string name="legs">Legs</string>
    <string name="back">Back</string>
    <!-- Muscle groups - END   -->

    <string name="workout">Workout</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="training_changed_message">Some parts of training have been changed do you want to save them</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="set_error_message">Set has to have number of repeats and weight lifted</string>

    <!-- Exercise names and descriptions -->
    <string name="exercise_name_barbell_bench_press">Barbell Bench Press</string>
    <string name="exercise_desc_barbell_bench_press">Lie flat on a bench and set your hands just outside of shoulder width.
Set your shoulder blades by pinching them together and driving them into the bench.
Take a deep breath and allow your spotter to help you with the lift off in order to maintain tightness through your upper back.
Let the weight settle and ensure your upper back remains tight after lift off.
Inhale and allow the bar to descend slowly by unlocking the elbows.
Lower the bar in a straight line to the base of the sternum (breastbone) and touch the chest.
Push the bar back up in a straight line by pressing yourself into the bench, driving your feet into the floor for leg drive, and extending the elbows.
Repeat for the desired number of repetitions.</string>
    <string name="exercise_name_standing_cable_fly">Standing Cable Fly</string>
    <string name="exercise_desc_standing_cable_fly">Set both pulleys directly at (or slightly above) shoulder height and select the desired weight.
Grasp both handles with a neutral grip and take a step forward to split the stance.
Press the handles to lockout while flexing the pecs and extending the elbows.
Keep a slight bend in the elbows, move entirely at the shoulder joint, and slowly allow the arms to open while the pecs stretch.
Return to the starting position by flexing your pecs and bringing the handles together at chest height.
Slowly lower back to the starting position and repeat for the desired number of repetitions.</string>
    <string name="exercise_name_incline_dumbbell_curl">Incline Dumbbell Curl</string>
    <string name="exercise_desc_incline_dumbbell_curl">Position an incline bench at roughly 55-65 degrees, select the desired weight from the rack, and sit upright with your back flat against the pad.
Using a supinated (palms up) grip, take a deep breath and curl both dumbbells towards your shoulders.
Once the biceps are fully shortened, slowly lower the weights back to the starting position.
Repeat for the desired number of repetitions.</string>
    <string name="exercise_name_dumbbell_hammer_preacher_curl">Dumbbell Hammer Preacher Curl</string>
    <string name="exercise_desc_dumbbell_hammer_preacher_curl">Select the desired weight from the rack, and sit in an upright position with your chest flat against the preacher bench.
Keep your upper arm pressed into the pad and use a neutral (palms facing up) grip.
Take a deep breath and slowly lower the dumbbell away from your shoulder.
Once the bicep is fully lengthened, curl the weight back to the starting position.
Repeat for the desired number of repetitions on both sides.</string>
    <string name="exercise_name_ez_bar_skullcrusher">EZ Bar Skullcrusher</string>
    <string name="exercise_desc_ez_bar_skullcrusher">Select your desired weight and sit on the edge of a flat bench.
To get into position, lay back and keep the bar close to your chest. Once you are supine, press the weight to lockout.
Lower the weights towards your head by unlocking the elbows and allowing the ez bar to drop toward your forehead or just above.
Once your forearms reach parallel or just below, reverse the movement by extending the elbows while flexing the triceps to lockout the weight.
Repeat for the desired number of repetitions.</string>
    <string name="exercise_name_rope_tricep_extension">Rope Tricep Extension</string>
    <string name="exercise_desc_rope_tricep_extension">Attach a rope to a cable stack as high as possible and assume a standing position.
Grasp the rope with a neutral grip (palms facing in) and lean forward slightly by hinging at the hips.
Initiate the movement by extending the elbows and flexing the triceps.
Pull the rope downward until the elbows are almost locked out and then slowly lower under control back to the starting position.
Repeat for the desired number of repetitions.</string>
    <!-- Exercise names and descriptions - END -->

    <string name="statistics">Statistics</string>
    <string name="series_max">Max</string>
    <string name="series_mIn">Min</string>
    <string name="exercise_name">Exercise name*</string>
    <string name="exercise_description">Exercise Description*</string>
    <string name="video_link">Video link</string>
    <string name="non_empty_field">Can\'t be empty</string>
    <string name="select_one_muscle_group">Select at list one muscle group</string>
    <string name="select_muscle_grups">Select muscle grups</string>
    <string name="video">Video</string>
    <string name="copy_training">Copy exercises from date</string>
    <string name="new_training">New Training</string>
</resources>