<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_statistics">

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.mars.co.liftmetrics.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_workout"
        android:name="com.mars.co.liftmetrics.ui.workout.WorkoutFragment"
        android:label="@string/workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@+id/navigation_exercises"
        android:name="com.mars.co.liftmetrics.ui.exercises.ExercisesFragment"
        android:label="@string/exercises"
        tools:layout="@layout/fragment_exercises" />
</navigation>