<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_side_margin"
    tools:context=".ui.exercises.create.CreateExerciseActivity">

    <Spinner
        android:id="@+id/muscle_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/muscle_spinner"
        android:layout_marginTop="20dp"
        android:hint="@string/exercise_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/exercise_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exercise_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="4"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/video_link">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exercise_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/exercise_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/video_layout"
        app:layout_constraintBottom_toTopOf="@id/add_exercise"
        android:src="@drawable/ic_image_search_24dp"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/FloatingButton"
        android:src="@drawable/ic_check_24dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>